--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         version = '0.1.0'
         description = 'Reactor InterruptedException utilities.'
         group = 'moe.pine'
-        siteUrl = 'https://github.com/pine/reactor-interrupted-exceptions'
+        websiteUrl = 'https://github.com/pine/reactor-interrupted-exceptions'
+        issueTrackerUrl = 'https://github.com/pine/reactor-interrupted-exceptions/issues'
         gitUrl = 'https://github.com/pine/reactor-interrupted-exceptions.git'
         userOrg = 'pinemz'
 
@@ -20,7 +21,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         classpath 'gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.11'
         classpath 'net.rdrei.android.buildtimetracker:gradle-plugin:0.11.0'
     }
