--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,12 @@ buildscript {
         userOrg = 'pinemz'
 
         // Dependencies
-        junitVersion = '4.12'
-        mockitoVersion = '2.24.5'
-        powermockVersion = '2.0.0'
-        reactorVersion = '3.3.0.RELEASE'
+        reactorVersion = '3.4.6.RELEASE'
+        junitVersion = '5.7.2'
+        mockitoVersion = '3.10.0'
     }
     repositories {
-        jcenter()
+        mavenCentral()
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
@@ -31,7 +30,7 @@ buildscript {
 
 // ----- Project ------------------------------------------
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
@@ -46,19 +45,19 @@ compileJava {
     options.compilerArgs << '-Xlint:deprecation'
 }
 
+test {
+    useJUnitPlatform()
+}
+
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation "io.projectreactor:reactor-core:$reactorVersion"
-    testImplementation "junit:junit:$junitVersion"
+    api "io.projectreactor:reactor-core:$reactorVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "org.powermock:powermock-core:$powermockVersion"
-    testImplementation "org.powermock:powermock-reflect:$powermockVersion"
-    testImplementation "org.powermock:powermock-module-junit4:$powermockVersion"
-    testImplementation "org.powermock:powermock-module-junit4-rule:$powermockVersion"
-    testImplementation "org.powermock:powermock-api-mockito2:$powermockVersion"
 }
 
 
