--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     api "io.projectreactor:reactor-core:$reactorVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testImplementation 'org.assertj:assertj-core:3.20.2'
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
 }
 
