fix: replace deprecated method

--- a/build.gradle
+++ b/build.gradle
@@ -83,8 +83,8 @@ jacoco {
 
 jacocoTestReport {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
@@ -99,8 +99,8 @@ spotbugs {
 }
 spotbugsMain {
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.required = false
+        html.required = true
     }
 }
 spotbugsTest {
