--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,11 @@ repositories {
 
 dependencies {
     implementation "io.projectreactor:reactor-core:$reactorVersion"
+
+    // FindBugs
+    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
+    testCompileOnly 'com.google.code.findbugs:jsr305:3.0.2'
+
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation 'org.assertj:assertj-core:3.20.2'
