--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ after_success:
   - ./gradlew jacocoTestReport
   - curl -fLso codecov https://codecov.io/bash;
     VERSION=$(grep -o 'VERSION=\"[0-9\.]*\"' codecov | cut -d'"' -f2);
-    ls -la;
-    echo $VERSION;
+    for i in 1 256 512; do
+      echo $i;
+    done
