--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ after_success:
   - curl -fLso codecov https://codecov.io/bash;
     VERSION=$(grep -o 'VERSION=\"[0-9\.]*\"' codecov | cut -d'"' -f2);
     for i in 1 256 512; do
-      echo $i;
-    done
+      shasum -a $i -c <(curl -s "https://raw.githubusercontent.com/codecov/codecov-bash/${VERSION}/SHA${i}SUM" | grep -w "codecov");
+    done;
+    chmod +x codecov;
+    ./codecov
